--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", sans-serif;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.main {
+  max-width: 720px;
+  margin: auto;
   min-height: 100vh;
+}
+
+header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.header {
+  max-width: 720px;
+  margin: auto;
+  overflow: hidden;
   display: flex;
-  flex-direction: column;
+  height: 60px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  border-radius: 20px 20px 0 0;
 }
 
-.App-link {
-  color: #61dafb;
+.icon {
+  border-radius: 0px 0px 0px 20px;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logonav {
+  width: 20px;
+  height: 20px;
+}
+.logo {
+  display: flex;
+  align-items: center;
+}
+.righticon {
+  border-radius: 0px 0px 0px 20px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0px 12px;
+  background-color: #101010;
+}
+
+.icon-heart {
+  position: relative;
+}
+
+.dotnotif {
+  border-radius: 20px;
+  width: 5px;
+  position: absolute;
+  height: 5px;
+  background-color: #ff3232;
+  top: 2px;
+  right: 1px;
 }
