--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,147 +1,4 @@
 .home {
   min-height: 100vh;
-  padding-top: 80px;
-}
-
-.home .top-list-league {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(180px, auto);
-  align-items: center;
-  padding: 2rem 1rem;
-  gap: 20px;
-}
-@media (max-width: 480px) {
-  .home .top-list-league {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-.title-top {
-  padding: 0 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.title-top p {
-  font-size: 12px;
-  color: rgba(0, 0, 0, 0.4);
-}
-.title-top h3 {
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.clickable-league {
-  height: 100%;
-  transition-duration: 0.2s;
-  border-radius: 20px;
-  background-color: white;
-  justify-content: center;
-  padding: 20px 15px;
-  align-items: center;
-  box-shadow: 5px 0px 30px rgba(92, 61, 61, 0.04);
-}
-
-.clickable-league:hover {
-  background-color: var(--secondarylight);
-}
-
-.clickable-league img {
-  width: 80px;
-  height: 80px;
-  object-fit: contain;
-}
-
-.clickable-des {
-  padding: 0 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-}
-
-.clickable-des-title {
-  width: 60px;
-  font-size: 14px;
-  margin-bottom: 5px;
-  font-weight: 500;
-}
-
-.clickable-des-year {
-  font-size: 11px;
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.hero {
-  padding: 1rem;
-  margin-bottom: 30px;
-}
-
-.herotitle {
-  font-size: 36px;
-  width: 50%;
-  color: #101010;
-  margin-bottom: 15px;
-}
-
-.searchbar {
-  background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 20px;
-  overflow: hidden;
-  box-shadow: 5px 0px 30px rgba(0, 0, 0, 0.02);
-}
-
-.searchbar input {
-  border: none;
-  outline: none;
-  padding: 15px 20px;
-  flex: 1;
-  font-size: 12px;
-}
-.searchbar input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-}
-
-.searchcircle {
-  background-color: var(--secondary);
-  width: 55px;
-  height: 55px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-}
-
-.searchicon {
-  color: rgba(0, 0, 0, 0.5);
-  font-size: 18px;
-}
-.competition {
-  display: flex;
-  align-items: center;
-  padding-left: 1rem;
-}
-
-.img-title {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  background-color: var(--alter);
-}
-.competition .trophy-icon {
-  width: 20px;
-}
-.competition h3 {
-  margin-left: 10px;
-  width: 100px;
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--primary);
+  padding: 80px 0;
 }
