--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   --active: #94f0bc;
   --alter: #e1f0c7;
   --bggray: #fafafa;
+  text-decoration: none;
 }
 
 .App {
@@ -38,7 +39,6 @@
   align-items: center;
   padding: 0 10px;
   justify-content: space-between;
-  border-radius: 20px 20px 0 0;
 }
 
 .icon {
