--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,16 @@
   --bggray: #fafafa;
   text-decoration: none;
 }
-
+.button {
+  text-decoration: none;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
 .App {
   background-color: var(--bggray);
 }
