--- a/src/components/competitionlist.css
+++ b/src/components/competitionlist.css
@@ -51,7 +51,8 @@
 
 @media (max-width: 768px) {
   .clickable-league {
-    display: inline;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
@@ -59,7 +60,7 @@
   background-color: var(--secondarylight);
 }
 
-.clickable-league img {
+.clickable-league > img {
   width: 70px;
   height: 70px;
   object-fit: contain;
